k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciyex-portal-ui-ingress
spec:
  tls:
    - hosts:
        - portal.ciyex.com
      secretName: ciyex-portal-ui-prod-tls
  rules:
    - host: portal.ciyex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ciyex-portal-ui-prod
                port:
                  number: 3000
